Update `javafx` to v19