@@ -65,7 +65,7 @@ subprojects {
     }
 
 	javafx {
-	    version = "17.0.2"
+	    version = "19"
 	    modules = [ 'javafx.fxml', 'javafx.controls', 'javafx.media', 'javafx.swing']
 	}
 
@@ -81,4 +81,13 @@ application {
 run {
     dependsOn ':Editor:build'
     classpath = project(':Editor').sourceSets.main.runtimeClasspath
+    jvmArgs = [
+        '--add-opens=javafx.graphics/com.sun.javafx.css=ALL-UNNAMED',
+        '--add-opens=javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED',
+        '--add-opens=javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED',
+        '--add-opens=javafx.controls/com.sun.javafx.scene.control.skin=ALL-UNNAMED',
+        '--add-opens=javafx.base/com.sun.javafx.binding=ALL-UNNAMED',
+        '--add-opens=javafx.base/com.sun.javafx.event=ALL-UNNAMED',
+        '--add-opens=javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED'
+    ]
 }
